Deployment/e2e/applications/Cheese/06-login-proxy.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: uitsmijter-proxy
  namespace: cheese
spec:
  type: ExternalName
  externalName: uitsmijter-authserver.uitsmijter.svc.cluster.local
  ports:
    - port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: uitsmijter
  namespace: cheese
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: uitsmijter-forward-header@kubernetescrd

spec:
  tls:
    - secretName: example.com

  rules:
    - host: login.example.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: uitsmijter-proxy
                port:
                  number: 80
    # Must not be configured in tenant config
    - host: missing-tenant.example.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: uitsmijter-proxy
                port:
                  number: 80
